lit-bit-macro/tests/compile-fail/unknown_target_state.stderr
error: Transition target state 'NonExistentState' (normalized from AST path: 'NonExistentState') not found or path is ambiguous.
  --> tests/compile-fail/unknown_target_state.rs:19:18
   |
19 |         on Go => NonExistentState; // Error: NonExistentState is not defined
   |                  ^^^^^^^^^^^^^^^^
